--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ h1{
     margin-left: auto;
     margin-right: auto;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+    color: brown !important;
 }
 body{
     font-family: "Abril Fatface", serif;
